--- a/src/app/todo-page/todo-page.component.scss
+++ b/src/app/todo-page/todo-page.component.scss
@@ -1,19 +1,117 @@
+
+
 #nav {
 
   font-size: 2rem;
   text-align: center;
   text-align: center;
+  width: 40%;
 }
 .nav {
   text-decoration: none;
   font-size: 2rem;
   text-align: center;
   text-align: center;
+   margin-left: 2rem;
+   width: 40%;
+}
+h2 {
+  color: white;
+}
+.ListaInserita {
+  text-align: center;
+  margin-top: 2rem;
+
+}
+.form{
+  color: #f9f9f9;
+  font-family: 'Bungee', cursive;
+  margin-right: 1.5;
+  border-radius: 10px;
+  text-align: center;
+  /* color:  rgb(8, 8, 8); */
+  width: 15rem;
+  height: 1.5rem;
+  background: #0f0c29;
+  background: -webkit-linear-gradient(to right, #0f0c29, #302b63, #24243e);
+  background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+
+
 }
 
-.css{
-  margin:  0 auto;
-  background-color: rgba(50, 0, 0, 0.678);
-  padding: 5rem;
+#checkbox{
+  margin-left: 1.5rem;
+  width: 1.5rem;
+  height: 1.2rem;
+  color: rgb(0, 0, 0);
+  background-color: #7a2828;
 
+}
+
+.css1 {
+
+  color: white;
+  text-align: center;
+
+
+}
+
+.css {
+
+  text-align: center;
+
+
+  margin-top: 5rem;
+}
+
+.css1 a:visited {
+  color: white;
+}
+.btn {
+  background: #2b5876;
+  background: #a73737;
+  background: -webkit-linear-gradient(to right, #7a2828, #a73737);
+  background: linear-gradient(to right, #7a2828, #a73737);
+  margin-left:5px ;
+  color: white;
+  width: 2rem;
+  height: 2rem;
+   border-radius: 10px;}
+
+.Todo {
+  padding: 2px 16px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  padding: 2px 2px 2px 2px;
+  border: 2px solid white;
+  background: #e65c00;
+  background: -webkit-linear-gradient(to right, #F9D423, #e65c00);
+  background: linear-gradient(to right, #F9D423, #e65c00);
+
+  /* background: #2b5876;
+  background: -webkit-linear-gradient(to right, #4e4376, #2b5876);
+  background: linear-gradient(to right, #4e4376, #2b5876); */
+
+  width: 40%;
+  height: 60%;
+  margin-left: 25rem;
+  margin-top: 15rem;
+  border-radius:10px;
+
+}
+.remove {
+  background: #a73737;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #7a2828, #a73737);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #7a2828, #a73737); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+   margin-right:2rem;
+  color: white;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 30%;
+}
+
+
+.Todo:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
